--- a/src/components/Challenges/challenges.css
+++ b/src/components/Challenges/challenges.css
@@ -141,7 +141,7 @@
 
 @media screen and (max-width: 430px) {
     .challenges-section {
-        padding: 12rem 1.25rem;
+        padding: 9rem 2rem 0rem 2rem;
     }
     .challenges-section h2 {
         font-size: clamp(30px, 4vw, 40px);
