--- a/src/components/ProjectCards/projects.css
+++ b/src/components/ProjectCards/projects.css
@@ -175,13 +175,13 @@
 
 @media screen and (max-width: 430px) {
     .project-section {
-        padding: 5rem 1.25rem;
+        padding: 5rem 2rem 0rem 2rem;
     }
     .project-section h2 {
         font-size: clamp(30px, 4vw, 40px);
     }
     .cards {
-        margin: 22rem auto 12rem auto;
+        margin: 18rem auto 12rem auto;
     }
     .project-card {
         width: 100%;
